; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mmsh.c_get_chunk_header.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mmsh.c_get_chunk_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@CHUNK_HEADER_LENGTH = common dso_local global i32 0, align 4
@EXT_HEADER_LENGTH = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Read data packet header failed!\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"Strange chunk type %d\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"Read ext header failed!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*)* @get_chunk_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_chunk_header(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32* %1, i32** %5, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %6, align 8
  %17 = load i32, i32* @CHUNK_HEADER_LENGTH, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %7, align 8
  %20 = alloca i32, i64 %18, align 16
  store i64 %18, i64* %8, align 8
  %21 = load i32, i32* @EXT_HEADER_LENGTH, align 4
  %22 = zext i32 %21 to i64
  %23 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %9, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @CHUNK_HEADER_LENGTH, align 4
  %28 = call i32 @ffurl_read_complete(i32 %26, i32* %20, i32 %27)
  store i32 %28, i32* %12, align 4
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* @CHUNK_HEADER_LENGTH, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %2
  %33 = load i32, i32* @AV_LOG_ERROR, align 4
  %34 = call i32 (i32*, i32, i8*, ...) @av_log(i32* null, i32 %33, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %35 = load i32, i32* @EIO, align 4
  %36 = call i32 @AVERROR(i32 %35)
  store i32 %36, i32* %3, align 4
  store i32 1, i32* %14, align 4
  br label %79

37:                                               ; preds = %2
  %38 = call i32 @AV_RL16(i32* %20)
  store i32 %38, i32* %10, align 4
  %39 = getelementptr inbounds i32, i32* %20, i64 2
  %40 = call i32 @AV_RL16(i32* %39)
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %10, align 4
  switch i32 %41, label %44 [
    i32 129, label %42
    i32 128, label %42
    i32 131, label %43
    i32 130, label %43
  ]

42:                                               ; preds = %37, %37
  store i32 4, i32* %13, align 4
  br label %49

43:                                               ; preds = %37, %37
  store i32 8, i32* %13, align 4
  br label %49

44:                                               ; preds = %37
  %45 = load i32, i32* @AV_LOG_ERROR, align 4
  %46 = load i32, i32* %10, align 4
  %47 = call i32 (i32*, i32, i8*, ...) @av_log(i32* null, i32 %45, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32 %46)
  %48 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %48, i32* %3, align 4
  store i32 1, i32* %14, align 4
  br label %79

49:                                               ; preds = %43, %42
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %51 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @ffurl_read_complete(i32 %52, i32* %23, i32 %53)
  store i32 %54, i32* %12, align 4
  %55 = load i32, i32* %12, align 4
  %56 = load i32, i32* %13, align 4
  %57 = icmp ne i32 %55, %56
  br i1 %57, label %58, label %63

58:                                               ; preds = %49
  %59 = load i32, i32* @AV_LOG_ERROR, align 4
  %60 = call i32 (i32*, i32, i8*, ...) @av_log(i32* null, i32 %59, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %61 = load i32, i32* @EIO, align 4
  %62 = call i32 @AVERROR(i32 %61)
  store i32 %62, i32* %3, align 4
  store i32 1, i32* %14, align 4
  br label %79

63:                                               ; preds = %49
  %64 = load i32, i32* %11, align 4
  %65 = load i32, i32* %13, align 4
  %66 = sub nsw i32 %64, %65
  %67 = load i32*, i32** %5, align 8
  store i32 %66, i32* %67, align 4
  %68 = load i32, i32* %10, align 4
  %69 = icmp eq i32 %68, 129
  br i1 %69, label %73, label %70

70:                                               ; preds = %63
  %71 = load i32, i32* %10, align 4
  %72 = icmp eq i32 %71, 130
  br i1 %72, label %73, label %77

73:                                               ; preds = %70, %63
  %74 = call i32 @AV_RL32(i32* %23)
  %75 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %76 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %75, i32 0, i32 0
  store i32 %74, i32* %76, align 4
  br label %77

77:                                               ; preds = %73, %70
  %78 = load i32, i32* %10, align 4
  store i32 %78, i32* %3, align 4
  store i32 1, i32* %14, align 4
  br label %79

79:                                               ; preds = %77, %58, %44, %32
  %80 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %80)
  %81 = load i32, i32* %3, align 4
  ret i32 %81
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ffurl_read_complete(i32, i32*, i32) #2

declare dso_local i32 @av_log(i32*, i32, i8*, ...) #2

declare dso_local i32 @AVERROR(i32) #2

declare dso_local i32 @AV_RL16(i32*) #2

declare dso_local i32 @AV_RL32(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
